# ml-bootcamp

assignment1/: README.md  model.py  pyproject.toml  report.pages
