[tool.poetry]
name = "assignment1"
version = "0.1.0"
description = ""
authors = ["Kasun Herath <kasunh01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
